--- a/package.json
+++ b/package.json
@@ -35,13 +35,18 @@
     "serve-static": "^1.10.2"
   },
   "devDependencies": {
+    "borschik": "^1.4.1",
+    "borschik-tech-cleancss": "^2.0.1",
     "bower": "^1.7.9",
     "chokidar-cli": "^1.2.0",
     "enb": "^1.3.0",
+    "enb-bem-i18n": "^1.1.0",
     "enb-bem-techs": "^2.2.1",
     "enb-bemxjst": "^6.4.0",
+    "enb-bemxjst-i18n": "tadatuta/enb-bemxjst-i18n#bemtree-nextgen",
     "enb-borschik": "^2.4.0",
     "enb-js": "^1.1.0",
+    "enb-modules": "^0.2.0",
     "enb-stylus": "^2.3.2",
     "eslint": "^3.3.1",
     "eslint-config-yandex": "^1.0.6",
