--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.4",
     "express-session": "^1.14.1",
     "lodash": "^4.11.2",
+    "metascraper": "^1.0.6",
     "moment": "^2.14.1",
     "mongoose": "^4.5.9",
     "morgan": "^1.7.0",
